--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -7,6 +7,8 @@ $kaldi-red-invert: #fff
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 
+@import "~bulma"
+
 // Helper Classes
 .full-width-image-container
   width: 100vw
@@ -24,4 +26,6 @@ $primary-invert: $kaldi-red-invert
 .margin-top-0
   margin-top: 0 !important
 
-@import "~bulma"
+.navbar-item.logo
+  font-size: 2.5rem
+  font-weight: 500
